<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_white">

    <ProgressBar
        android:id="@+id/id_login_progressbar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/id_login_and_reg_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:text="@string/at_first_log_in"
            android:textColor="@color/main_blue"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginVertical="32dp"/>

        <LinearLayout
            android:id="@+id/id_box_sign_in_up_textviews"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_sign_in_textview"

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:text="@string/login"
                android:textColor="@color/main_blue"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/id_sign_up_textview"

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"

                android:text="@string/register"
                android:textColor="@color/main_blue"
                android:textSize="16sp" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_textinputlayout_email"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_input_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_edittext_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_textinputlayout_pass"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_input_pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_edittext_pass"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/id_sign_in_button"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/main_pink"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/id_sign_up_button"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/main_pink"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:id="@+id/id_textview_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black70"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>