<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_white">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/acc_repair_email_box"
        android:src="@color/transparent100"
        android:backgroundTint="@color/transparent100"
        android:scaleX="0.75"
        android:scaleY="0.75"/>

    <LinearLayout
        android:id="@+id/acc_repair_email_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/account_repair"
            android:textSize="25sp"
            android:textColor="@color/main_blue"
            android:layout_gravity="center_horizontal"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/main_pink"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/black70"
            android:textSize="23sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/accept"
            android:backgroundTint="@color/main_pink"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:onClick="accountRecAccept"/>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:backgroundTint="@color/main_pink"
            android:hint="@string/password"
            android:textColor="@color/black70"
            android:textAlignment="center"
            android:textSize="23sp"
            android:visibility="invisible"/>

    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password_back_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/back"
        android:textColor="@color/black70"
        android:textSize="18sp"
        android:layout_marginBottom="60dp"
        android:onClick="forgotPasswordBack_1"/>

</androidx.constraintlayout.widget.ConstraintLayout>