<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/id_textview_check_in_into"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Запись в"
        android:background="@color/black"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20dp"
        android:padding="8dp"/>

    <Button
        android:id="@+id/id_popup_with_dates_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_date"
        android:layout_margin="8dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/id_periods_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

    <TextView
        android:id="@+id/id_textview_current_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choice_for_check_in"
        android:background="@color/black"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20dp"
        android:padding="8dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/id_send_check_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/send_check_in"
        android:layout_weight="0"/>

</LinearLayout>