<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_white">

    <ImageButton
        android:id="@+id/add_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_and_reg_box"
        android:src="@drawable/add_user_128"
        android:backgroundTint="@color/transparent100"
        android:scaleX="0.75"
        android:scaleY="0.75"
        android:contentDescription="new avatar" />

    <LinearLayout
        android:id="@+id/login_and_reg_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/log_reg_button_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/log_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/login"
                android:textSize="25sp"
                android:textColor="@color/main_blue"
                android:onClick="logInClick"/>

            <TextView
                android:id="@+id/reg_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/register"
                android:textSize="18sp"
                android:textColor="@color/main_blue60"
                android:onClick="regClick"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/email_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/main_pink"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/black70"
            android:textSize="23sp"/>

        <EditText
            android:id="@+id/password_text_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:backgroundTint="@color/main_pink"
            android:hint="@string/password"
            android:textColor="@color/black70"
            android:textAlignment="center"
            android:textSize="23sp"/>

        <Button
            android:id="@+id/main_log_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"
            android:backgroundTint="@color/main_pink"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:onClick="loginClick"/>

    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:textColor="@color/black70"
        android:textSize="18sp"
        android:layout_marginBottom="60dp"
        android:onClick="forgotPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>