<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_your_information"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_marginVertical="8dp"
            android:background="@color/main_pink"
            android:textColor="@color/white"
            android:padding="4dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_textinputlayout_firstname"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_first_name"
            android:layout_marginVertical="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_edittext_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_textinputlayout_lastname"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_last_name"
            android:layout_marginVertical="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_edittext_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_textinputlayout_lastname"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_last_name"
            android:layout_marginVertical="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_edittext_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>

</ScrollView>